added estimation disclaimer

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             <footer>
                 <p>Source: <a href="https://www.ncsu.edu/coronavirus/testing-and-tracking/">NCSU Coronavirus Testing and Tracking</a></p>
                 <em>The data presented on this website is not guaranteed to be correct. Please exercise caution in interpreting it. The operator of this website is not liable for consequences of decisions made based upon this data.</em>
+                <br><br>
+                <em>For the sake of completeness, some daily data before Aug. 20 has been estimated due to the nature of provided data at the time.</em>
                 <script src="dashboard.js"></script>
             </footer>
         </main>
