--- a/index.html
+++ b/index.html
@@ -10,49 +10,8 @@
 
         <main>
             <h1 class="display">NCSU COVID Tracker</h1>
-            <h1>New Daily Cases</h1>
-            <div class="chart-container">
-                <canvas id="new-cases"></canvas>
-            </div>
-
-            <div class="row">
-                <div>
-                    <h1>Cumulative Total Cases <sub></sub></h1>
-                    <div class="chart-container">
-                        <canvas id="cumulative-cases"></canvas>
-                    </div>
-                </div>
-                <div>
-                    <h1>R<sub>t</sub> - Effective Reproduction Number</h1>
-                    <div class="chart-container">
-                        <canvas id="rt"></canvas>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div>
-                    <h1>Quarantine Housing Units</h1>
-                    <div class="chart-container">
-                        <canvas id="quarantine"></canvas>
-                    </div>
-                </div>
-                <div>
-                    <h1>Quarantined Individuals</h1>
-                    <div class="chart-container">
-                        <canvas id="quarantine-ind"></canvas>
-                    </div>
-                </div>
-            </div>
-            
-
-            <footer>
-                <p>Source: <a href="https://www.ncsu.edu/coronavirus/testing-and-tracking/">NCSU Coronavirus Testing and Tracking</a></p>
-                <em>The data presented on this website is not guaranteed to be correct. Please exercise caution in interpreting it. The operator of this website is not liable for consequences of decisions made based upon this data.</em>
-                <br><br>
-                <em>For the sake of completeness, some daily data before Aug. 20 has been estimated due to the nature of provided data at the time.</em>
-                <script src="dashboard.js"></script>
-            </footer>
+            <h2>NCSU has a <a href="https://www.ncsu.edu/coronavirus/testing-and-tracking/">new dashboard</a> which provides much more detailed information, rendering this site redundant.</h2>
+            <p>I may reimplement calculations on their new data such as R<sub>t</sub> in the future.</p>
         </main>
        
     </body>
